--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+					<testSourceDirectory>selenium-cucumber/src/test/java/com/selenium/testrunner</testSourceDirectory>
+					<includes>
+						<include>**/TestRunner.java</include>
+					</includes>
+				</configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
